# whirlpool

./: .gitignore  build_gui.bat  build_vst.bat  build_whirlpool.bat  check_gui.bat  check_vst.bat  check_whirlpool.bat
hello_vst/: Cargo.toml
hello_vst/src/: lib.rs
hello_vst/target_bak/: .rustc_info.json
hello_vst/target_bak/release/.fingerprint/anyhow-573d0deeedf1f0ad/: build-script-build-script-build  build-script-build-script-build.json
hello_vst/target_bak/release/.fingerprint/cfg-if-3cfe40de624c43d8/: lib-cfg_if  lib-cfg_if.json
hello_vst/target_bak/release/.fingerprint/crossbeam-epoch-91b4efd6b04f9a83/: lib-crossbeam_epoch  lib-crossbeam_epoch.json
hello_vst/target_bak/release/.fingerprint/crossbeam-utils-1055c9c40c306677/: build-script-build-script-build  build-script-build-script-build.json
hello_vst/target_bak/release/.fingerprint/crossbeam-utils-ea0c83c58c6f55c8/: lib-crossbeam_utils  lib-crossbeam_utils.json
hello_vst/target_bak/release/.fingerprint/crossbeam-utils-edfa30e6a1c7cc4b/: run-build-script-build-script-build  run-build-script-build-script-build.json
hello_vst/target_bak/release/.fingerprint/deranged-f9faff69a9a74eae/: lib-deranged  lib-deranged.json
hello_vst/target_bak/release/.fingerprint/itoa-7e5095f5a568209b/: lib-itoa  lib-itoa.json
hello_vst/target_bak/release/.fingerprint/num-conv-339c55dba4183802/: lib-num_conv  lib-num_conv.json
hello_vst/target_vst_build_final/: .rustc_info.json
hello_vst/xtask/: Cargo.toml
hello_vst/xtask/src/: main.rs
hellovstGUI/: Cargo.toml
whirlpool/: Cargo.toml
whirlpool/src/: lib.rs
(+73 files in other folders)
