[package]
name = "hello_vst"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
description = "A hello world VST3/CLAP plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Using git dependency for latest fixes and features
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
rand = "0.8"
