[package]
name = "whirlpool"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
rand = "0.8"
rustfft = "6.1.0"

[profile.release]
lto = "thin"
strip = true
