[package]
name = "whirlpool"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "master" }
rustfft = "6.1.0"

[profile.release]
lto = "thin"
strip = true
